# polling-application

./: README.md  pyproject.toml
pollproject/pollApp/: admin.py  models.py  views.py
pollproject/pollApp/migrations/: 0001_initial.py
pollproject/pollproject/: asgi.py  settings.py  urls.py  wsgi.py
pollproject/templates/pages/: index.html
